[gd_scene load_steps=6 format=3 uid="uid://cwjkch5a2e311"]

[ext_resource type="Texture2D" uid="uid://c8gyisgk5qc0t" path="res://Artwork/Sprites/Other/Arma.png" id="1_7bvn3"]
[ext_resource type="Script" uid="uid://cdgk045f0c8a8" path="res://Scripts/arma.gd" id="1_bjc62"]
[ext_resource type="Texture2D" uid="uid://dcc044bpqxskh" path="res://Resources/Particles/LightSprites/light23.png" id="3_bjc62"]
[ext_resource type="Texture2D" uid="uid://bl85m1o4qtjhm" path="res://Resources/Particles/LightSprites/light2.png" id="4_lgjjx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckcjq"]
size = Vector2(55, 10)

[node name="Arma" type="Node2D"]
script = ExtResource("1_bjc62")
bullets = 25115
cooldown = 0.6

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_7bvn3")
offset = Vector2(46, 0)

[node name="ShotPos" type="Marker2D" parent="."]
position = Vector2(31, 0)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="LightArea" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightArea"]
position = Vector2(50.5, 0)
shape = SubResource("RectangleShape2D_ckcjq")
debug_color = Color(1.68458e-06, 0.639882, 0.358198, 0.42)

[node name="LuzLanterna" type="PointLight2D" parent="."]
position = Vector2(58, -5)
scale = Vector2(0.5, 0.21875)
color = Color(0, 0.74902, 0.301961, 1)
energy = 0.57
shadow_enabled = true
texture = ExtResource("4_lgjjx")

[node name="PointLight2D2" type="PointLight2D" parent="."]
modulate = Color(1, 1, 1, 0.52549)
position = Vector2(27, -2.38419e-07)
scale = Vector2(0.204836, 0.204836)
color = Color(0, 0.750395, 0.265207, 1)
energy = 0.95
shadow_enabled = true
texture = ExtResource("3_bjc62")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 36

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
